// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeArtifact repository 1`] = `
Object {
  "Outputs": Anything,
  "Parameters": Anything,
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3BucketBEE108A9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3VersionKeyA877E3C9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3VersionKeyA877E3C9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Bucket83908E77": Anything,
    "CodeArtifact": Anything,
    "CodeArtifactDomainDB0947A4": Anything,
    "CodeArtifactGetEndpoint0223B4AF": Anything,
    "CodeArtifactGetEndpointCustomResourcePolicy9A5E4C87": Anything,
    "EFSEFSAP9E813513": Anything,
    "EFSEfsMountTarget1674E914B": Anything,
    "EFSEfsMountTarget2A889DFBF": Anything,
    "EFSEfsSecurityGroup56F189CE": Anything,
    "EFSEfsSecurityGroupfromTestStackTransliteratorSecurityGroupAA48990AALLTRAFFIC8436D055": Anything,
    "EFSF3301CFD": Anything,
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3Bucket4D46ABB5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MonitoringHighSeverityDashboard17D9CD74": Anything,
    "MonitoringWatchfulDashboard9EB9FD4D": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864DurationAlarmC446DC83": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ErrorsAlarmFF1181A3": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ThrottlesAlarm80C36BF4": Anything,
    "Transliterator6462E4D2": Object {
      "DependsOn": Array [
        "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "TransliteratorServiceRoleDE4FF5F3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3BucketD7CA7618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Creates python documentation from jsii-enabled npm packages",
        "Environment": Object {
          "Variables": Object {
            "CODE_ARTIFACT_DOMAIN_NAME": Object {
              "Fn::GetAtt": Array [
                "CodeArtifact",
                "DomainName",
              ],
            },
            "CODE_ARTIFACT_DOMAIN_OWNER": Object {
              "Fn::GetAtt": Array [
                "CodeArtifact",
                "DomainOwner",
              ],
            },
            "CODE_ARTIFACT_REPOSITORY_ENDPOINT": Object {
              "Fn::GetAtt": Array [
                "CodeArtifactGetEndpoint0223B4AF",
                "repositoryEndpoint",
              ],
            },
            "HEADER_SPAN": "true",
            "HOME": "/mnt/efs/HOME",
            "TARGET_LANGUAGE": "python",
            "TMPDIR": "/mnt/efs",
          },
        },
        "FileSystemConfigs": Array [
          Object {
            "Arn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":access-point/",
                  Object {
                    "Ref": "EFSEFSAP9E813513",
                  },
                ],
              ],
            },
            "LocalMountPath": "/mnt/efs",
          },
        ],
        "Handler": "index.handler",
        "MemorySize": 10240,
        "Role": Object {
          "Fn::GetAtt": Array [
            "TransliteratorServiceRoleDE4FF5F3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
        "TracingConfig": Object {
          "Mode": "PassThrough",
        },
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "TransliteratorSecurityGroup52541706",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VPCPrivateSubnet1Subnet8BCA10E0",
            },
            Object {
              "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "TransliteratorLogRetention2FE858DC": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Transliterator6462E4D2",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TransliteratorSecurityGroup52541706": Object {
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function TestStackTransliterator9D9D4864",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "VPCB9E5F0B4",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TransliteratorServiceRoleDE4FF5F3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TransliteratorServiceRoleDefaultPolicy44A1392F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "sts:GetServiceBearerToken",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:AWSServiceName": "codeartifact.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "codeartifact:GetAuthorizationToken",
                "codeartifact:GetRepositoryEndpoint",
                "codeartifact:ReadFromRepository",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "CodeArtifactDomainDB0947A4",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::GetAtt": Array [
                    "CodeArtifact",
                    "Arn",
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/assembly.json",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "Roles": Array [
          Object {
            "Ref": "TransliteratorServiceRoleDE4FF5F3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VPCB9E5F0B4": Anything,
    "VPCIGWB7E252D3": Anything,
    "VPCPrivateSubnet1DefaultRouteAE1D6490": Anything,
    "VPCPrivateSubnet1RouteTableAssociation347902D1": Anything,
    "VPCPrivateSubnet1RouteTableBE8A6027": Anything,
    "VPCPrivateSubnet1Subnet8BCA10E0": Anything,
    "VPCPrivateSubnet2DefaultRouteF4F5CFD2": Anything,
    "VPCPrivateSubnet2RouteTable0A19E10E": Anything,
    "VPCPrivateSubnet2RouteTableAssociation0C73D413": Anything,
    "VPCPrivateSubnet2SubnetCFCDAA7A": Anything,
    "VPCPublicSubnet1DefaultRoute91CEF279": Anything,
    "VPCPublicSubnet1EIP6AD938E8": Anything,
    "VPCPublicSubnet1NATGatewayE0556630": Anything,
    "VPCPublicSubnet1RouteTableAssociation0B0896DC": Anything,
    "VPCPublicSubnet1RouteTableFEE4B781": Anything,
    "VPCPublicSubnet1SubnetB4246D30": Anything,
    "VPCPublicSubnet2DefaultRouteB7481BBA": Anything,
    "VPCPublicSubnet2EIP4947BC00": Anything,
    "VPCPublicSubnet2NATGateway3C070193": Anything,
    "VPCPublicSubnet2RouteTable6F1A15F1": Anything,
    "VPCPublicSubnet2RouteTableAssociation5A808732": Anything,
    "VPCPublicSubnet2Subnet74179F39": Anything,
    "VPCVPCGW99B986DC": Anything,
  },
}
`;

exports[`VPC Endpoints 1`] = `
Object {
  "Outputs": Anything,
  "Parameters": Anything,
  "Resources": Object {
    "Bucket83908E77": Anything,
    "EFSEFSAP9E813513": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "EFSF3301CFD",
        },
        "RootDirectory": Object {},
      },
      "Type": "AWS::EFS::AccessPoint",
    },
    "EFSEfsMountTarget1674E914B": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "EFSF3301CFD",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "EFSEfsSecurityGroup56F189CE",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "EFSEfsMountTarget2A889DFBF": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "EFSF3301CFD",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "EFSEfsSecurityGroup56F189CE",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "EFSEfsSecurityGroup56F189CE": Object {
      "Properties": Object {
        "GroupDescription": "TestStack/EFS/EfsSecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "TestStack/EFS",
          },
        ],
        "VpcId": Object {
          "Ref": "VPCB9E5F0B4",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "EFSEfsSecurityGroupfromTestStackTransliteratorSecurityGroupAA48990AALLTRAFFIC8436D055": Object {
      "Properties": Object {
        "Description": "from TestStackTransliteratorSecurityGroupAA48990A:ALL TRAFFIC",
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "EFSEfsSecurityGroup56F189CE",
            "GroupId",
          ],
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "TransliteratorSecurityGroup52541706",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "EFSF3301CFD": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "FileSystemTags": Array [
          Object {
            "Key": "Name",
            "Value": "TestStack/EFS",
          },
        ],
      },
      "Type": "AWS::EFS::FileSystem",
      "UpdateReplacePolicy": "Retain",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3Bucket4D46ABB5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MonitoringHighSeverityDashboard17D9CD74": Anything,
    "MonitoringWatchfulDashboard9EB9FD4D": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864DurationAlarmC446DC83": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ErrorsAlarmFF1181A3": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ThrottlesAlarm80C36BF4": Anything,
    "Transliterator6462E4D2": Object {
      "DependsOn": Array [
        "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "TransliteratorServiceRoleDE4FF5F3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3BucketD7CA7618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Creates python documentation from jsii-enabled npm packages",
        "Environment": Object {
          "Variables": Object {
            "CODE_ARTIFACT_API_ENDPOINT": Object {
              "Fn::Select": Array [
                1,
                Object {
                  "Fn::Split": Array [
                    ":",
                    Object {
                      "Fn::Select": Array [
                        0,
                        Object {
                          "Fn::GetAtt": Array [
                            "VPCCodeArtifactAPIA2ABC3E9",
                            "DnsEntries",
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            "HEADER_SPAN": "true",
            "HOME": "/mnt/efs/HOME",
            "TARGET_LANGUAGE": "python",
            "TMPDIR": "/mnt/efs",
          },
        },
        "FileSystemConfigs": Array [
          Object {
            "Arn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":access-point/",
                  Object {
                    "Ref": "EFSEFSAP9E813513",
                  },
                ],
              ],
            },
            "LocalMountPath": "/mnt/efs",
          },
        ],
        "Handler": "index.handler",
        "MemorySize": 10240,
        "Role": Object {
          "Fn::GetAtt": Array [
            "TransliteratorServiceRoleDE4FF5F3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
        "TracingConfig": Object {
          "Mode": "PassThrough",
        },
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "TransliteratorSecurityGroup52541706",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6",
            },
            Object {
              "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "TransliteratorLogRetention2FE858DC": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Transliterator6462E4D2",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TransliteratorSecurityGroup52541706": Object {
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function TestStackTransliterator9D9D4864",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "VPCB9E5F0B4",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TransliteratorServiceRoleDE4FF5F3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TransliteratorServiceRoleDefaultPolicy44A1392F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/assembly.json",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "Roles": Array [
          Object {
            "Ref": "TransliteratorServiceRoleDE4FF5F3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VPCB9E5F0B4": Anything,
    "VPCCodeArtifactAPIA2ABC3E9": Anything,
    "VPCCodeArtifactAPISecurityGroup64F4145F": Anything,
    "VPCCodeArtifactRepoA711606D": Anything,
    "VPCCodeArtifactRepoSecurityGroupADDB69B7": Anything,
    "VPCEFS6144880F": Anything,
    "VPCEFSSecurityGroupAFB450D8": Anything,
    "VPCIsolatedSubnet1RouteTableAssociationA2D18F7C": Anything,
    "VPCIsolatedSubnet1RouteTableEB156210": Anything,
    "VPCIsolatedSubnet1SubnetEBD00FC6": Anything,
    "VPCIsolatedSubnet2RouteTable9B4F78DC": Anything,
    "VPCIsolatedSubnet2RouteTableAssociation7BF8E0EB": Anything,
    "VPCIsolatedSubnet2Subnet4B1C8CAA": Anything,
    "VPCS3CC6C5EE4": Anything,
  },
}
`;

exports[`VPC Endpoints and CodeArtifact repository 1`] = `
Object {
  "Outputs": Anything,
  "Parameters": Anything,
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3BucketBEE108A9",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3VersionKeyA877E3C9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3d3a3cc7f26921b237eff24fc5dd7aef8f0465a1f376b8f7918eb3d4b3e8797S3VersionKeyA877E3C9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Bucket83908E77": Anything,
    "CodeArtifact": Anything,
    "CodeArtifactDomainDB0947A4": Anything,
    "CodeArtifactGetEndpoint0223B4AF": Anything,
    "CodeArtifactGetEndpointCustomResourcePolicy9A5E4C87": Anything,
    "EFSEFSAP9E813513": Anything,
    "EFSEfsMountTarget1674E914B": Anything,
    "EFSEfsMountTarget2A889DFBF": Anything,
    "EFSEfsSecurityGroup56F189CE": Anything,
    "EFSEfsSecurityGroupfromTestStackTransliteratorSecurityGroupAA48990AALLTRAFFIC8436D055": Anything,
    "EFSF3301CFD": Anything,
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3Bucket4D46ABB5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MonitoringHighSeverityDashboard17D9CD74": Anything,
    "MonitoringWatchfulDashboard9EB9FD4D": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864DurationAlarmC446DC83": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ErrorsAlarmFF1181A3": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ThrottlesAlarm80C36BF4": Anything,
    "Transliterator6462E4D2": Object {
      "DependsOn": Array [
        "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "TransliteratorServiceRoleDE4FF5F3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3BucketD7CA7618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Creates python documentation from jsii-enabled npm packages",
        "Environment": Object {
          "Variables": Object {
            "CODE_ARTIFACT_API_ENDPOINT": Object {
              "Fn::Select": Array [
                1,
                Object {
                  "Fn::Split": Array [
                    ":",
                    Object {
                      "Fn::Select": Array [
                        0,
                        Object {
                          "Fn::GetAtt": Array [
                            "VPCCodeArtifactAPIA2ABC3E9",
                            "DnsEntries",
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            "CODE_ARTIFACT_DOMAIN_NAME": Object {
              "Fn::GetAtt": Array [
                "CodeArtifact",
                "DomainName",
              ],
            },
            "CODE_ARTIFACT_DOMAIN_OWNER": Object {
              "Fn::GetAtt": Array [
                "CodeArtifact",
                "DomainOwner",
              ],
            },
            "CODE_ARTIFACT_REPOSITORY_ENDPOINT": Object {
              "Fn::GetAtt": Array [
                "CodeArtifactGetEndpoint0223B4AF",
                "repositoryEndpoint",
              ],
            },
            "HEADER_SPAN": "true",
            "HOME": "/mnt/efs/HOME",
            "TARGET_LANGUAGE": "python",
            "TMPDIR": "/mnt/efs",
          },
        },
        "FileSystemConfigs": Array [
          Object {
            "Arn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":access-point/",
                  Object {
                    "Ref": "EFSEFSAP9E813513",
                  },
                ],
              ],
            },
            "LocalMountPath": "/mnt/efs",
          },
        ],
        "Handler": "index.handler",
        "MemorySize": 10240,
        "Role": Object {
          "Fn::GetAtt": Array [
            "TransliteratorServiceRoleDE4FF5F3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
        "TracingConfig": Object {
          "Mode": "PassThrough",
        },
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "TransliteratorSecurityGroup52541706",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VPCIsolatedSubnet1SubnetEBD00FC6",
            },
            Object {
              "Ref": "VPCIsolatedSubnet2Subnet4B1C8CAA",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "TransliteratorLogRetention2FE858DC": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Transliterator6462E4D2",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TransliteratorSecurityGroup52541706": Object {
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function TestStackTransliterator9D9D4864",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "VPCB9E5F0B4",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TransliteratorServiceRoleDE4FF5F3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TransliteratorServiceRoleDefaultPolicy44A1392F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "sts:GetServiceBearerToken",
              "Condition": Object {
                "StringEquals": Object {
                  "sts:AWSServiceName": "codeartifact.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "codeartifact:GetAuthorizationToken",
                "codeartifact:GetRepositoryEndpoint",
                "codeartifact:ReadFromRepository",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "CodeArtifactDomainDB0947A4",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::GetAtt": Array [
                    "CodeArtifact",
                    "Arn",
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/assembly.json",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "Roles": Array [
          Object {
            "Ref": "TransliteratorServiceRoleDE4FF5F3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VPCB9E5F0B4": Anything,
    "VPCCodeArtifactAPIA2ABC3E9": Anything,
    "VPCCodeArtifactAPISecurityGroup64F4145F": Anything,
    "VPCCodeArtifactRepoA711606D": Anything,
    "VPCCodeArtifactRepoSecurityGroupADDB69B7": Anything,
    "VPCEFS6144880F": Anything,
    "VPCEFSSecurityGroupAFB450D8": Anything,
    "VPCIsolatedSubnet1RouteTableAssociationA2D18F7C": Anything,
    "VPCIsolatedSubnet1RouteTableEB156210": Anything,
    "VPCIsolatedSubnet1SubnetEBD00FC6": Anything,
    "VPCIsolatedSubnet2RouteTable9B4F78DC": Anything,
    "VPCIsolatedSubnet2RouteTableAssociation7BF8E0EB": Anything,
    "VPCIsolatedSubnet2Subnet4B1C8CAA": Anything,
    "VPCS3CC6C5EE4": Anything,
  },
}
`;

exports[`basic use 1`] = `
Object {
  "Outputs": Anything,
  "Parameters": Anything,
  "Resources": Object {
    "Bucket83908E77": Anything,
    "EFSEFSAP9E813513": Anything,
    "EFSEfsMountTarget1674E914B": Anything,
    "EFSEfsMountTarget2A889DFBF": Anything,
    "EFSEfsSecurityGroup56F189CE": Anything,
    "EFSEfsSecurityGroupfromTestStackTransliteratorSecurityGroupAA48990AALLTRAFFIC8436D055": Anything,
    "EFSF3301CFD": Anything,
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3Bucket4D46ABB5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters67b7823b74bc135986aa72f889d6a8da058d0c4a20cbc2dfc6f78995fdd2fc24S3VersionKeyB0F28861",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MonitoringHighSeverityDashboard17D9CD74": Anything,
    "MonitoringWatchfulDashboard9EB9FD4D": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864DurationAlarmC446DC83": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ErrorsAlarmFF1181A3": Anything,
    "MonitoringWatchfulTestStackTransliterator9D9D4864ThrottlesAlarm80C36BF4": Anything,
    "Transliterator6462E4D2": Object {
      "DependsOn": Array [
        "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "TransliteratorServiceRoleDE4FF5F3",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3BucketD7CA7618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters75f48e0bcdd44387d27f83caba59489a5604099e9cfdc2eb37d3b270551230beS3VersionKey7C750AD6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Creates python documentation from jsii-enabled npm packages",
        "Environment": Object {
          "Variables": Object {
            "HEADER_SPAN": "true",
            "HOME": "/mnt/efs/HOME",
            "TARGET_LANGUAGE": "python",
            "TMPDIR": "/mnt/efs",
          },
        },
        "FileSystemConfigs": Array [
          Object {
            "Arn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":access-point/",
                  Object {
                    "Ref": "EFSEFSAP9E813513",
                  },
                ],
              ],
            },
            "LocalMountPath": "/mnt/efs",
          },
        ],
        "Handler": "index.handler",
        "MemorySize": 10240,
        "Role": Object {
          "Fn::GetAtt": Array [
            "TransliteratorServiceRoleDE4FF5F3",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
        "TracingConfig": Object {
          "Mode": "PassThrough",
        },
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "TransliteratorSecurityGroup52541706",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VPCPrivateSubnet1Subnet8BCA10E0",
            },
            Object {
              "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "TransliteratorLogRetention2FE858DC": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Transliterator6462E4D2",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TransliteratorSecurityGroup52541706": Object {
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function TestStackTransliterator9D9D4864",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "VPCB9E5F0B4",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TransliteratorServiceRoleDE4FF5F3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TransliteratorServiceRoleDefaultPolicy44A1392F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/assembly.json",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "Bucket83908E77",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "Bucket83908E77",
                          "Arn",
                        ],
                      },
                      "/data/*/docs-*-python.md.not-supported",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TransliteratorServiceRoleDefaultPolicy44A1392F",
        "Roles": Array [
          Object {
            "Ref": "TransliteratorServiceRoleDE4FF5F3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VPCB9E5F0B4": Anything,
    "VPCIGWB7E252D3": Anything,
    "VPCPrivateSubnet1DefaultRouteAE1D6490": Anything,
    "VPCPrivateSubnet1RouteTableAssociation347902D1": Anything,
    "VPCPrivateSubnet1RouteTableBE8A6027": Anything,
    "VPCPrivateSubnet1Subnet8BCA10E0": Anything,
    "VPCPrivateSubnet2DefaultRouteF4F5CFD2": Anything,
    "VPCPrivateSubnet2RouteTable0A19E10E": Anything,
    "VPCPrivateSubnet2RouteTableAssociation0C73D413": Anything,
    "VPCPrivateSubnet2SubnetCFCDAA7A": Anything,
    "VPCPublicSubnet1DefaultRoute91CEF279": Anything,
    "VPCPublicSubnet1EIP6AD938E8": Anything,
    "VPCPublicSubnet1NATGatewayE0556630": Anything,
    "VPCPublicSubnet1RouteTableAssociation0B0896DC": Anything,
    "VPCPublicSubnet1RouteTableFEE4B781": Anything,
    "VPCPublicSubnet1SubnetB4246D30": Anything,
    "VPCPublicSubnet2DefaultRouteB7481BBA": Anything,
    "VPCPublicSubnet2EIP4947BC00": Anything,
    "VPCPublicSubnet2NATGateway3C070193": Anything,
    "VPCPublicSubnet2RouteTable6F1A15F1": Anything,
    "VPCPublicSubnet2RouteTableAssociation5A808732": Anything,
    "VPCPublicSubnet2Subnet74179F39": Anything,
    "VPCVPCGW99B986DC": Anything,
  },
}
`;
